--- a/Components/ListComponents/style.styl
+++ b/Components/ListComponents/style.styl
@@ -71,6 +71,8 @@ $innerShadow = inset 0 0 11px rgba(0, 0, 0, 0.15)
           width: 100%
 
       &-content
+        max-width: 740px
+
         +below('m')
           padding-top: 30px
 
